--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/pirasalbe/Exploding-Kittens-Telegram-bot#readme",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "telegraf": "^3.38.0"
   },
   "devDependencies": {
